--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
@@ -40,6 +44,7 @@
     "@types/react-native-popup-dialog": "^0.16.2",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.16",
+    "jest-expo": "^40.0.2",
     "typescript": "~4.0.0"
   },
   "private": true
